--- a/web/index.html
+++ b/web/index.html
@@ -2,34 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ajax Text</title>
+    <title>Ajax Zip Code</title>
+    <style>
+      #entry {
+        margin: 2em 1em;
+      }
+      #location {
+        margin: 1em;
+      }
+    </style>
   </head>
   <body>
 
-    <div id="main">
-      This is the original text when the page first loads.
+    <div id="entry">
+      Zip code: <input id="zipcode" type="text" name="zipcode" />
+      <button id="ajax-button" type="button">Submit</button>
     </div>
 
-    <button id="ajax-button" type="button">Update content with Ajax</button>
+    <div id="location">
+    </div>
 
     <script>
-      function replaceText() {
-          var target = document.getElementById("main");
+      // Google asks for all API users to sign up for an API key
+      // For simple tests, still works without an API key
+      var api = 'http://maps.googleapis.com/maps/api/geocode/json';
+
+      function findLocation() {
+          var zipcode = document.getElementById('zipcode');
+          var url = api + '?address=' + zipcode.value;
+
           var xhr = new XMLHttpRequest();
-          xhr.open('GET', 'new_content.txt', true);
-          xhr.onreadystatechange = function() {
-              if (xhr.readyState == 2){
-                  target.innerHTML = 'Loading...';
+          xhr.open('GET', url, true);
+
+          xhr.onreadystatechange = function () {
+              if (xhr.readyState < 4){
+                  showLoading();
               }
-              if (xhr.readyState == 4 && xhr.status == 200){
-                  //target.innerHTML = xhr.responseText;
+              if (xhr.readyState == 4 && xhr.status == 200)  {
+                  outputLocation(xhr.responseText);
               }
           };
           xhr.send();
       }
 
+      function showLoading() {
+          var target = document.getElementById('location');
+          target.innerHTML = 'Loading...';
+      }
+
+      function outputLocation(data) {
+          var target = document.getElementById('location');
+          var json = JSON.parse(data);
+          var address = json.result[0].formatted_address;
+          target.innerHTML = address;
+      }
+
+
       var button = document.getElementById ("ajax-button");
-      button.addEventListener("click", replaceText);
+      button.addEventListener("click", findLocation);
     </script>
 
   </body>
