les 12 respond with json data

--- a/web/index.html
+++ b/web/index.html
@@ -16,17 +16,23 @@
       function replaceText() {
 
         var target = document.getElementById("main");
+
         var xhr = new XMLHttpRequest();
 
         xhr.open('GET', 'new_content.php', true);
+
         xhr.onreadystatechange = function () {
+
           console.log('readyState: ' + xhr.readyState);
-          
           if(xhr.readyState == 2) {
             target.innerHTML = 'Loading...';
           }
           if(xhr.readyState == 4 && xhr.status == 200) {
-            target.innerHTML = xhr.responseText;
+
+              var json = JSON.parse(xhr.responseText);
+            //target.innerHTML = json.regular;
+             // target.innerHTML = json.short;
+              target.innerHTML = json.long;
           }
         };
         xhr.send();
